# claude-code-mcp-qa-automation

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/analyze-feature/: SKILL.md
.claude/skills/apply-feedback/: SKILL.md
.claude/skills/audit-requirements/: SKILL.md
.claude/skills/capacity-planner/: SKILL.md
.claude/skills/compare-sprints/: SKILL.md
.claude/skills/deliver-report/: SKILL.md
.claude/skills/discover-boards/: SKILL.md
.claude/skills/flag-control/: SKILL.md
.claude/skills/generate-daily-report/: SKILL.md
.claude/skills/generate-excel-report/: SKILL.md
.claude/skills/generate-readiness-report/: SKILL.md
.claude/skills/generate-retrospective/: SKILL.md
.claude/skills/orchestrator/: SKILL.md
.claude/skills/query-sprint-data/: SKILL.md
.claude/skills/run-pipeline/: SKILL.md
.claude/skills/system-check/: SKILL.md
.github/workflows/: ci.yml
config/: flags.yaml  team_config.yaml
docs/: architecture.md  claim-evidence.md
fixtures/: example_sprint_01.json  example_sprint_02.json
scripts/: integrity-check.sh  run-demo.sh
src/: __init__.py  __main__.py  config.py  metrics.py  orchestrator.py  pipeline.py  report.py  store.py
tests/: test_pipeline.py
