[project]
name = "qa-automation-demo"
version = "0.1.0"
description = "Reference scaffold demonstrating Claude Code + MCP QA-automation patterns. Not a published package."
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qa_demo"]
package-dir = {"qa_demo" = "src"}
